PSD: allow zero-sized resource blocks as per the specification

BUG: 461493
CCBUG: 450983